// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CampaignsUserMarketingPage renders for disabled 1`] = `
<CampaignsUserMarketingPage
  enableReadAccess={false}
>
  <CampaignsMarketing
    body={
      <section
        className="my-3"
      >
        <h2>
          Interested in campaigns?
        </h2>
        <p>
          At this time, creating and managing campaigns is only available to Sourcegraph admins. What can you do?
        </p>
        <div
          className="row"
        >
          <ol>
            <li>
              Let your Sourcegraph admin know you're interested in using campaigns for your team.
            </li>
            <li>
              Learn how to
               
              <a
                href="https://docs.sourcegraph.com/user/campaigns#creating-campaigns"
              >
                get started creating campaigns
              </a>
              .
            </li>
          </ol>
        </div>
        <a
          className="btn btn-primary"
          href="https://docs.sourcegraph.com/user/campaigns"
          rel="noopener"
        >
          Read more about campaigns
        </a>
      </section>
    }
  >
    <section
      className="mt-3 mb-5"
    >
      <h1
        className="font-weight-bold display-4"
      >
        Campaigns 
        <span
          className="badge badge-info"
        >
          Beta
        </span>
      </h1>
      <h2
        className="mb-5"
      >
        Make and track large-scale changes across all code
      </h2>
      <div
        className="text-center"
      >
        <iframe
          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
          allowFullScreen={true}
          className="percy-hide chromatic-ignore"
          frameBorder="0"
          height="315"
          src="https://www.youtube.com/embed/aqcCrqRB17w"
          width="560"
        />
      </div>
    </section>
    <section
      className="my-3"
    >
      <h2>
        Interested in campaigns?
      </h2>
      <p>
        At this time, creating and managing campaigns is only available to Sourcegraph admins. What can you do?
      </p>
      <div
        className="row"
      >
        <ol>
          <li>
            Let your Sourcegraph admin know you're interested in using campaigns for your team.
          </li>
          <li>
            Learn how to
             
            <a
              href="https://docs.sourcegraph.com/user/campaigns#creating-campaigns"
            >
              get started creating campaigns
            </a>
            .
          </li>
        </ol>
      </div>
      <a
        className="btn btn-primary"
        href="https://docs.sourcegraph.com/user/campaigns"
        rel="noopener"
      >
        Read more about campaigns
      </a>
    </section>
    <section
      className="my-3"
    >
      <h2>
        Ask questions and share feedback
      </h2>
      <p>
        Get in touch on Twitter 
        <a
          href="https://twitter.com/srcgraph"
        >
          @srcgraph
        </a>
        , file an issue in our
         
        <a
          href="https://github.com/sourcegraph/sourcegraph/issues"
        >
          public issue tracker
        </a>
        , or email
         
        <a
          href="mailto:feedback@sourcegraph.com"
        >
          feedback@sourcegraph.com
        </a>
        . We look forward to hearing from you!
      </p>
    </section>
  </CampaignsMarketing>
</CampaignsUserMarketingPage>
`;

exports[`CampaignsUserMarketingPage renders for enabled 1`] = `
<CampaignsUserMarketingPage
  enableReadAccess={true}
>
  <CampaignsMarketing
    body={
      <section
        className="my-3"
      >
        <h2>
          Interested in campaigns?
        </h2>
        <p>
          At this time, creating and managing campaigns is only available to Sourcegraph admins. What can you do?
        </p>
        <div
          className="row"
        >
          <ol>
            <li>
              Let your Sourcegraph admin know you're interested in using campaigns for your team.
            </li>
            <li>
              Ask your Sourcegraph admin for
               
              <a
                href="https://docs.sourcegraph.com/user/campaigns"
                rel="noopener"
              >
                read-only access
              </a>
               
              to campaigns.
              <div
                className="alert alert-info mt-3"
              >
                <b>
                  NOTE:
                </b>
                 Repository permissions are NOT enforced by campaigns, so your admin may not grant read-only access if your Sourcegraph instance has repository permissions configured.
              </div>
            </li>
            <li>
              Learn how to
               
              <a
                href="https://docs.sourcegraph.com/user/campaigns#creating-campaigns"
              >
                get started creating campaigns
              </a>
              .
            </li>
          </ol>
        </div>
        <a
          className="btn btn-primary"
          href="https://docs.sourcegraph.com/user/campaigns"
          rel="noopener"
        >
          Read more about campaigns
        </a>
      </section>
    }
  >
    <section
      className="mt-3 mb-5"
    >
      <h1
        className="font-weight-bold display-4"
      >
        Campaigns 
        <span
          className="badge badge-info"
        >
          Beta
        </span>
      </h1>
      <h2
        className="mb-5"
      >
        Make and track large-scale changes across all code
      </h2>
      <div
        className="text-center"
      >
        <iframe
          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
          allowFullScreen={true}
          className="percy-hide chromatic-ignore"
          frameBorder="0"
          height="315"
          src="https://www.youtube.com/embed/aqcCrqRB17w"
          width="560"
        />
      </div>
    </section>
    <section
      className="my-3"
    >
      <h2>
        Interested in campaigns?
      </h2>
      <p>
        At this time, creating and managing campaigns is only available to Sourcegraph admins. What can you do?
      </p>
      <div
        className="row"
      >
        <ol>
          <li>
            Let your Sourcegraph admin know you're interested in using campaigns for your team.
          </li>
          <li>
            Ask your Sourcegraph admin for
             
            <a
              href="https://docs.sourcegraph.com/user/campaigns"
              rel="noopener"
            >
              read-only access
            </a>
             
            to campaigns.
            <div
              className="alert alert-info mt-3"
            >
              <b>
                NOTE:
              </b>
               Repository permissions are NOT enforced by campaigns, so your admin may not grant read-only access if your Sourcegraph instance has repository permissions configured.
            </div>
          </li>
          <li>
            Learn how to
             
            <a
              href="https://docs.sourcegraph.com/user/campaigns#creating-campaigns"
            >
              get started creating campaigns
            </a>
            .
          </li>
        </ol>
      </div>
      <a
        className="btn btn-primary"
        href="https://docs.sourcegraph.com/user/campaigns"
        rel="noopener"
      >
        Read more about campaigns
      </a>
    </section>
    <section
      className="my-3"
    >
      <h2>
        Ask questions and share feedback
      </h2>
      <p>
        Get in touch on Twitter 
        <a
          href="https://twitter.com/srcgraph"
        >
          @srcgraph
        </a>
        , file an issue in our
         
        <a
          href="https://github.com/sourcegraph/sourcegraph/issues"
        >
          public issue tracker
        </a>
        , or email
         
        <a
          href="mailto:feedback@sourcegraph.com"
        >
          feedback@sourcegraph.com
        </a>
        . We look forward to hearing from you!
      </p>
    </section>
  </CampaignsMarketing>
</CampaignsUserMarketingPage>
`;
